--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@metaplex-foundation/js": "^0.20.1",
     "@prisma/client": "^5.21.0",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/spl-token-metadata": "^0.1.6",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.95.3",
+    "axios": "^1.7.7",
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.3.0",
     "node-cron": "^3.0.3",
