--- a/package.json
+++ b/package.json
@@ -5,19 +5,29 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "start": "tsc -b && node dist/index.js"
+    "start": "tsc -b && node dist/index.js",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/node": "^22.7.5",
     "@types/node-cron": "^3.0.11",
     "dotenv": "^16.4.5",
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.6.0",
+    "globals": "^15.11.0",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0"
   },
   "dependencies": {
     "@metaplex-foundation/js": "^0.20.1",
@@ -26,9 +36,13 @@
     "@solana/spl-token-metadata": "^0.1.6",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/web3.js": "^1.95.3",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
     "axios": "^1.7.7",
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.3.0",
+    "eslint-plugin-perfectionist": "^3.9.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "node-cron": "^3.0.3",
     "telegraf": "^4.16.3",
     "tweetnacl": "^1.0.3",
